admin members/orders directory refactoring apply common entity(general) 26/04/17